kubera-enterprise/templates/kubera-core-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubera-core-server
  labels:
    component: kubera-core-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kubera-core-server
  template:
    metadata:
      labels:
        component: kubera-core-server
    spec:
      containers:
        - name: graphql-server
          image: mayadataio/kubera-core-server:ci
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
        - name: auth-server
          image: litmuschaos/litmusportal-auth-server:ci
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      serviceAccountName: kubera-svc-account
