kubera-enterprise/templates/agent-gateway-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-gateway-server
spec:
  ports:
  - name: gateway-server
    port: 8080
    targetPort: 8080
  - name: debug-server
    port: 8081
    targetPort: 8081
  selector:
    kubera.io/app: agent-gateway-server
  type: ClusterIP
