kubera-enterprise/templates/kubera-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubera-core-server
spec:
  ports:
    - name: graphql-server
      port: 9002
      targetPort: 8080
    - name: auth-server
      port: 9003
      targetPort: 3000
  selector:
    component: kubera-core-server
