kubera-enterprise/templates/kubera-core-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubera-core-ui
spec:
  ports:
    - name: http
      port: 9091
      targetPort: 8080
  selector:
    component: kubera-core-ui
